# mr-scraper-price-intelligence

./: .gitignore  EVALUATION.md  README.md  RESULTS.md  main.py  predict.py  pyproject.toml  requirements.txt  visualize.py
models/: product_models.joblib  shop_features.joblib
notebooks/: 01_eda.ipynb  02_anchor_simulation.ipynb  anchor_simulation.py  eda.py
src/: __init__.py  anchor_calibration.py  data_loader.py  evaluate.py  feature_engineering.py  model_global.py  model_shop.py
