[project]
name = "mrscraper-price-intelligence"
version = "0.1.0"
description = "Price prediction pipeline for e-commerce scraping outages — MrScraper AI Engineer Take Home Test"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "lightgbm==4.4.0",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "gdown==5.2.0",
    "tqdm==4.66.4",
    "joblib==1.4.2",
    "jupyter==1.1.1",
]

[tool.uv]
dev-dependencies = []
